<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">E-Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_item">Add Item</string>
    <string name="title_activity_groceries_item">Your Items</string>
    <string name="edit_name_hint">Enter a Name...</string>
    <string name="edit_name_label">Name:</string>
    <string name="edit_picture_label">Picture:</string>
    <string name="edit_notifications_label">Notifcation Settings:</string>
    <string name="button_save">Save</string>
    <string name="edit_expiry_label">Expiry Date:</string>
    <string name="button_cancel">Cancel</string>
    <string name="main_screen_quit_text">Do want to Exit Application</string>
    <string name="main_screen_quit_yes">Yes</string>
    <string name="main_screen_quit_no">No</string>
    <string name="button_done">Done</string>
    <string name="button_remove">Remove</string>
    <string name="title_activity_edit_item">Edit your Item</string>

</resources>