<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="20dp"
	    android:orientation="vertical"
	    android:background="@drawable/wallpaper_verylight">
    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/edit_name_label" />
	    
	    <EditText
	        android:id="@+id/edit_name"
	        android:layout_width="276dp"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="220dp"
	        android:hint="@string/edit_name_hint" />
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/edit_expiry_label" />
	    
	    <DatePicker
	        android:id="@+id/edit_picker_expiry"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:calendarViewShown="false"
	        android:startYear="2013"/>
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/edit_notifications_label" />
	    
	    <Spinner
		    android:id="@+id/edit_spinner_notifications"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content" />
	    
	<LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:orientation="horizontal">

	        <Button
	            android:id="@+id/edit_button_cancel"
	            android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
	            android:background="@drawable/buttoncancelshape"
	            android:text="@string/button_cancel" />
	        
	        <Button
	            android:id="@+id/edit_button_done"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
	            android:background="@drawable/button_save"
	            android:text="@string/button_save" />

	    </LinearLayout>
	    
	    <LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:orientation="horizontal">
		    <Button
		        android:id="@+id/edit_button_remove"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:background="@drawable/button_remove"
		        android:text="@string/button_remove"/>
	    </LinearLayout>
	    
	</LinearLayout>
</ScrollView>